--- a/default.css
+++ b/default.css
@@ -172,6 +172,13 @@ span.material-icons.checkboxIcon.checkboxIcon-checked.check {
   background: linear-gradient(-135deg, rgba(40, 40, 40) 50%, transparent 50%);
 }
 
+.countIndicator,
+.fullSyncIndicator,
+.mediaSourceIndicator, 
+.playedIndicator {
+	background: var(--accent)
+}
+
 button.emby-tab-button.emby-button.emby-tab-button-active:hover {
   color: var(--accent) !important;
 }
